Register -> Confirm -> Authenticate path works

--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "backbone-couch": "^2.0.1",
+    "backbone-validation": "^0.11.5",
     "body-parser": "^1.14.1",
-    "cradle": "^0.6.9",
     "express": "^4.13.3",
+    "fs": "0.0.2",
     "jsonwebtoken": "^5.4.1",
-    "mongoose": "^4.1.12",
     "morgan": "^1.6.1",
     "nano": "^6.1.5",
     "nodemailer": "^1.8.0",
-    "sails-couchdb-orm": "^0.10.3",
-    "underscore": "^1.8.3",
-    "waterline": "^0.10.26"
+    "nodemailer-express-handlebars": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel": "^5.8.23",
