--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
     "morgan": "^1.6.1",
+    "node-uuid": "^1.4.3",
     "nodemailer": "^1.8.0",
     "underscore": "^1.8.3"
   },
