Added mocha, chai, and sinon

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,13 @@
         "semi": [
             2,
             "always"
+        ],
+        "no-unused-vars": [
+            2,
+            {"vars": "all", "args": "none"}
+        ],
+        "no-console": [
+          0
         ]
     },
     "env": {
