now using jsen validation

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "backbone-couch": "^2.0.1",
-    "backbone-validation": "^0.11.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "jsen": "^0.6.0",
     "jsonwebtoken": "^5.4.1",
     "mocha": "^2.3.3",
     "morgan": "^1.6.1",
@@ -20,10 +20,11 @@
     "babel-compile": "^0.1.0",
     "chai": "^3.4.0",
     "esdoc": "^0.4.1",
+    "esformatter": "^0.8.1",
+    "esformatter-ignore": "^0.1.3",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
-    "sinon": "^1.17.2",
-    "esformatter": "^0.8.1"
+    "sinon": "^1.17.2"
   },
   "scripts": {
     "format": "esformatter -i '*(src|test)/**/*.js'",
