--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "node-server",
   "version": "1.0.0",
   "description": "Node Server",
-  "main": "server.js",
+  "main": "es5/src/index.js",
   "dependencies": {
     "backbone": "^1.2.3",
-	"backbone-validation": "^0.11.5",
-	"backbone-couch": "^2.0.1",
+    "backbone-couch": "^2.0.1",
+    "backbone-validation": "^0.11.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "jsen": "^0.6.0",
@@ -14,34 +14,35 @@
     "mocha": "^2.3.3",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
-    "nodemailer": "^1.8.0",
+    "nodemailer": "^2.1.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-compile": "^0.1.0",
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.0",
-    "esdoc": "^0.4.1",
-    "esformatter": "^0.8.1",
+    "esdoc": "^0.4.4",
+    "esformatter": "^0.9.0",
     "esformatter-ignore": "^0.1.3",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "sinon": "^1.17.2"
   },
   "scripts": {
-    "format": "esformatter -i '*(src|test)/**/*.js'",
-    "lint": "eslint '*(src|test)/**/*.js' || true",
+    "build": "babel es6 -d es5",
+    "prepublish": "npm run build",
+    "format:enforce": "esformatter -i 'es6/**/*.js'",
+    "format": "esformatter --diff 'es6/**/*.js'",
+    "lint": "eslint 'es6/**/*.js'",
     "doc": "esdoc -c .esdoc.json",
-    "build": "babel-compile src:lib test:.test || true",
-    "prestart": "npm run build",
-    "start": "node lib/index.js",
-    "pretest": "npm run build",
-    "test": "./node_modules/.bin/mocha './.test/**/*.js'"
+    "start": "node es5/src/index.js",
+    "test": "mocha './es5/test/**/*.js'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bikelomatic-complexity/node-server.git"
   },
-  "author": "",
+  "author": "Adventure Cycling Association",
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/bikelomatic-complexity/node-server/issues"
