--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "backbone-couch": "^2.0.1",
+    "backbone-pouch": "file:../../barstool/backbone-pouch",
     "backbone-validation": "^0.11.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
@@ -13,8 +14,11 @@
     "jsonwebtoken": "^5.4.1",
     "mocha": "^2.3.3",
     "morgan": "^1.6.1",
+    "nano": "^6.2.0",
     "node-uuid": "^1.4.3",
     "nodemailer": "^2.1.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^1.2.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
