--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "backbone-pouch": "file:../../barstool/backbone-pouch",
     "backbone-validation": "^0.11.5",
     "body-parser": "^1.14.1",
+    "config": "^1.19.0",
     "express": "^4.13.3",
+    "js-yaml": "^3.5.2",
     "jsen": "^0.6.0",
     "jsonwebtoken": "^5.4.1",
     "mocha": "^2.3.3",
