--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 before_script:
 - npm run format
 - npm run lint
+after_success:
+- npm run coverage
 notifications:
   email:
     on_success: never
