--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.0",
+    "coveralls": "^2.11.6",
     "esdoc": "^0.4.4",
     "esformatter": "^0.9.0",
     "esformatter-ignore": "^0.1.3",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "mocha": "^2.3.3",
+    "nyc": "^5.6.0",
     "sinon": "^1.17.2",
     "supertest": "^1.1.0"
   },
@@ -42,7 +44,8 @@
     "lint": "eslint 'es6/**/*.js'",
     "doc": "esdoc -c .esdoc.json",
     "start": "node es5/src/index.js",
-    "test": "mocha './es5/test/**/*.js'"
+    "test": "mocha './es5/test/**/*.js'",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
