--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
 - npm run format
 - npm run lint
 after_success:
-- npm run coverage
+- npm run report
 notifications:
   email:
     on_success: never
