--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esformatter-ignore": "^0.1.3",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
+    "fs-tools": "^0.2.11",
     "mocha": "^2.3.3",
     "nyc": "^5.6.0",
     "sinon": "^1.17.2",
@@ -44,8 +45,18 @@
     "lint": "eslint 'es6/**/*.js'",
     "doc": "esdoc -c .esdoc.json",
     "start": "node es5/src/index.js",
-    "test": "mocha './es5/test/**/*.js'",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "unit": "mocha './es5/test/**/*.js' --require './es5/shim'",
+    "test": "nyc npm run unit",
+    "report": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "nyc": {
+    "exclude": [
+      "es5/test/",
+      "es5/shim.js",
+      "es5/src/model",
+      "es5/src/register.js",
+      "es5/src/util/mailer.js"
+    ]
   },
   "repository": {
     "type": "git",
