--- a/package.json
+++ b/package.json
@@ -49,14 +49,15 @@
     "restart": "forever restart es5/src/index.js",
     "stop": "forever stop es5/src/index.js",
     "start": "node es5/src/index.js",
-    "unit": "mocha './es5/test/**/*.js' --require './es5/shim'",
+    "clean": "rm -r es5/",
+    "unit": "mocha './es5/test/**/*.js' --require './shim'",
     "test": "nyc npm run unit",
     "report": "nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
     "exclude": [
+      "shim.js",
       "es5/test/",
-      "es5/shim.js",
       "es5/src/model",
       "es5/src/register.js",
       "es5/src/util/mailer.js"
