--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_script:
 - npm run lint
 after_success:
 - npm run report
+cache:
+  directories:
+    - node_modules
 notifications:
   email:
     on_success: never
