--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Node Server",
   "main": "es5/src/index.js",
   "dependencies": {
+    "ajv": "^3.6.2",
     "backbone": "^1.2.3",
-    "backbone-couch": "^2.0.1",
-    "backbone-validation": "^0.11.5",
+    "backbone-pouch": "git+https://github.com/jo/backbone-pouch.git#5aef445",
     "body-parser": "^1.14.1",
     "config": "^1.19.0",
     "express": "^4.13.3",
+    "express-validator": "^2.19.1",
     "forever": "^0.15.1",
     "js-yaml": "^3.5.2",
-    "jsen": "^0.6.0",
     "jsonwebtoken": "^5.4.1",
     "morgan": "^1.6.1",
     "nano": "^6.2.0",
@@ -20,6 +20,7 @@
     "nodemailer": "^2.1.0",
     "passport": "^0.3.2",
     "passport-jwt": "^1.2.1",
+    "pouchdb": "^5.2.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -27,7 +28,7 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.0",
     "coveralls": "^2.11.6",
-    "esdoc": "^0.4.4",
+    "docco": "^0.7.0",
     "esformatter": "^0.9.0",
     "esformatter-ignore": "^0.1.3",
     "eslint": "^1.8.0",
@@ -35,17 +36,16 @@
     "fs-tools": "^0.2.11",
     "mocha": "^2.3.3",
     "nyc": "^5.6.0",
+    "open": "0.0.5",
     "sinon": "^1.17.2",
     "supertest": "^1.1.0"
   },
   "scripts": {
-    "version": "echo $npm_package_version",
-    "build": "babel es6 -d es5",
-    "prepublish": "npm run build",
+    "prepublish": "babel es6 -d es5",
     "format:enforce": "esformatter -i 'es6/**/*.js'",
     "format": "esformatter --diff 'es6/**/*.js'",
     "lint": "eslint 'es6/**/*.js'",
-    "doc": "esdoc -c .esdoc.json",
+    "doc": "docco es6/src/*.js es6/src/*/*.js",
     "start": "node es5/src/index.js",
     "clean": "rm -r es5/",
     "unit": "mocha './es5/test/**/*.js' --require './shim'",
