Added tests for the registration routes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.0",
+    "chai-as-promised": "^5.2.0",
     "coveralls": "^2.11.6",
     "docco": "^0.7.0",
     "esformatter": "^0.9.0",
@@ -55,10 +56,7 @@
   "nyc": {
     "exclude": [
       "shim.js",
-      "es5/test/",
-      "es5/src/model",
-      "es5/src/register.js",
-      "es5/src/util/mailer.js"
+      "es5/test/"
     ]
   },
   "repository": {
