Connect register and authenticate logic
 - Fixes _users document overwrite issue.
   Before, we were 'patching' documents into PouchDB, which PouchDB does not
   suuport. On document update, you have to supply the document exactly as
   you want it to look. This was deleting the user's password hash.

--- a/config/default.yml
+++ b/config/default.yml
@@ -2,7 +2,7 @@ couch:
   protocol: http
   domain: localhost
   port: 5984
-  username: admin # Override these if your development CouchDB is different
+  username: admin
   password: admin
 token:
   secret: secret
@@ -13,3 +13,4 @@ server:
   port: 8080
 mail:
   account: bicycle-touring-companion@adventurecycling.org
+  send: false
