--- a/config/production.yml
+++ b/config/production.yml
@@ -2,9 +2,14 @@ couch:
   protocol: http
   domain: opsworks-database-1500749100.us-east-1.elb.amazonaws.com
   port: 5984
+  # username: env SERVER_COUCH_USERNAME
+  # password: env SERVER_COUCH_PASSWORD
 token:
+  # secret: env SERVER_SECRET
   iss: adventurecycling.org
   exp: 15m
 server:
   domain: localhost
   port: 80
+mail:
+  send: true
