--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "ajv": "^3.6.2",
     "backbone": "^1.2.3",
-    "backbone-pouch": "git+https://github.com/jo/backbone-pouch.git#5aef445",
+    "backbone-pouch": "^1.5.0",
     "body-parser": "^1.14.1",
-    "btc-models": "git+https://github.com/bikelomatic-complexity/btc-models.git#v1.0.0",
+    "btc-models": "^0.2.0",
     "config": "^1.19.0",
     "express": "^4.13.3",
     "express-validator": "^2.19.1",
     "js-yaml": "^3.5.2",
     "jsonwebtoken": "^5.4.1",
+    "lodash": "^4.11.2",
     "morgan": "^1.6.1",
     "nano": "^6.2.0",
     "node-uuid": "^1.4.3",
