--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^5.4.1",
     "lodash": "^4.11.2",
     "morgan": "^1.6.1",
+    "multer": "^1.1.0",
     "nano": "^6.2.0",
     "node-uuid": "^1.4.3",
     "nodemailer": "^2.1.0",
